# Quantsim

./: .gitignore  README.md
.github/workflows/: pyinstaller.yml  python-publish.yml
gui/: .gitignore  app.py  pyproject.toml
gui/qml/: bloch.qml
gui/scripts/: build.py
gui/windows/: main.py
gui/windows/widgets/: __init__.py  blochsphere.py  editor.py
gui/windows/widgets/editor/: __init__.py  caditem.py  editor.py  hadamarad.py  inverses.py  observer.py  paulix.py  pauliy.py  pauliz.py  qubit.py  s.py
gui/windows/widgets/editor /: caditem.py  editor.py
lib/: README.md  pyproject.toml
lib/examples/: all.ipynb
lib/pyquantsim/core/: __init__.py  register.py
lib/pyquantsim/gates/: __init__.py  hadamarad.py  identity.py  inverses.py  paulix.py  pauliy.py  pauliz.py  sgate.py
quantsim/: pyproject.toml
quantsim/examples/: all.ipynb
quantsim/quantsim/circuit/: __init__.py  circuit.py  component.py  gate.py  observer.py  qubit.py  wire.py
quantsim/quantsim/core/: qubit.py
quantsim/quantsim/gates/: __init__.py  gate.py  hadamarad.py  identity.py  inverses.py  paulix.py  pauliy.py  pauliz.py  sgate.py
